# examcore

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO.md  Dockerfile  LICENSE  README.md  cypress.config.js  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg
.claude/: settings.json
.github/workflows/: cd.yml  ci.yml
apps/academic/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/academic/management/commands/: refresh_counts.py
apps/academic/migrations/: 0001_initial.py  0002_add_performance_indexes.py  0003_alter_subject_unique_together_and_more.py
apps/accounts/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_otpverification_school.py  0003_class_user_assigned_class.py  0004_invitation.py
apps/attempts/: admin.py  apps.py  managers.py  models.py  signals.py  urls.py  views.py
apps/attempts/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_update_selected_option_to_fk.py  0005_add_performance_indexes.py  0006_alter_examanswer_unique_together_and_more.py  0007_add_practice_mode_support.py
apps/auth/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/auth/migrations/: 0001_initial.py  0002_add_performance_indexes.py
apps/core/: apps.py  env_validator.py  mixins.py  urls.py  views.py
apps/core/management/commands/: seed_cypress.py  seed_data.py
apps/core/services/: email.py  notification.py  otp.py  pdf.py
apps/dashboards/: apps.py  cache.py  signals.py  urls.py  views.py
apps/exams/: admin.py  apps.py  forms.py  managers.py  mixins.py  models.py  signals.py  tests.py  urls.py  views.py
apps/exams/migrations/: 0001_initial.py  0002_initial.py  0003_add_performance_indexes.py  0004_alter_examquestion_unique_together_and_more.py  0005_add_exam_type.py
apps/institution/: admin.py  apps.py  context_processors.py  forms.py  models.py
apps/institution/migrations/: 0001_initial.py
apps/invitations/: admin.py  forms.py  models.py  urls.py  views.py
apps/invitations/migrations/: 0001_initial.py  0002_initial.py  0003_add_performance_indexes.py  0004_add_teacher_assigned_subjects.py
apps/questions/: admin.py  forms.py  managers.py  mixins.py  models.py  tests.py  urls.py  views.py
apps/questions/migrations/: 0001_initial.py  0002_initial.py  0003_add_question_options_model.py  0004_migrate_options_data.py  0005_remove_old_option_fields.py  0006_add_performance_indexes.py
apps/results/: apps.py  urls.py
apps/users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_add_performance_indexes.py  0003_add_teacher_assigned_subjects.py  0004_add_notification_preferences.py
config/: urls.py
config/settings/: __init__.py  base.py  ci.py  development.py  production.py  test.py
cypress/e2e/01-setup/: 01-registration.cy.js  02-login.cy.js
cypress/e2e/02-admin/: 01-dashboard.cy.js  02-classes.cy.js  03-subjects.cy.js  04-examiners.cy.js  05-teachers.cy.js  06-students.cy.js
cypress/e2e/03-examiner/: 01-dashboard.cy.js  02-questions.cy.js  03-exams.cy.js
cypress/e2e/04-teacher/: 01-dashboard.cy.js  02-view-questions.cy.js  03-view-exams.cy.js  04-view-results.cy.js  05-assigned-subjects.cy.js
cypress/e2e/05-student/: 01-dashboard.cy.js  02-exam-list.cy.js  03-take-exam.cy.js  04-view-results.cy.js  05-profile.cy.js  06-answer-review.cy.js  07-performance.cy.js  08-exam-history.cy.js  09-notifications.cy.js  10-result-pdf.cy.js  11-practice-mode.cy.js  12-class-info.cy.js
cypress/e2e/06-password/: 01-forgot-password.cy.js
cypress/fixtures/: credentials.json  test-data.json
cypress/support/: commands.js  e2e.js
nginx/: nginx.conf
seed/: README.md
seed/data/: 01_institution.csv  02_classes.csv  03_subjects.csv  04_users.csv  05_questions.csv  06_exams.csv  07_exam_questions.csv  08_exam_attempts.csv
templates/: base.html  base_auth.html  styleguide.html
templates/academic/: student_class.html
templates/academic/classes/: management.html
templates/academic/subjects/: management.html
templates/accounts/: accept_invite.html  auth.html  dashboard.html  dashboard_examiner.html  dashboard_student.html  dashboard_teacher.html  forgot_password.html  reset_password.html
templates/accounts/classes/: management.html
templates/accounts/subjects/: management.html
templates/accounts/users/: examiners.html  students.html  teachers.html
templates/attempts/: exam_history.html  exam_list.html  exam_result.html  exam_review.html  exam_start.html  exam_take.html  performance.html  teacher_result_detail.html  teacher_results_list.html
templates/auth/: auth.html  forgot_password.html  reset_password.html
templates/components/base/: _head_styles.html
templates/components/forms/: _institution.html  _login.html  _otp.html  _register.html  _school.html
templates/components/ui/: _empty_state.html  _filter_form.html  _invite_user_modal.html  _modal.html  _page_header.html  _pagination.html  _status_badge.html  _user_list_item.html
templates/dashboards/: admin.html  examiner.html  student.html  teacher.html
templates/exams/: exam_confirm_delete.html  exam_detail.html  exam_form.html  exam_list.html  exam_questions.html  student_exam_result.html
templates/invitations/: accept_invite.html
templates/questions/: question_confirm_delete.html  question_form.html  question_list.html
templates/users/: examiners.html  notification_preferences.html  profile.html  students.html  teachers.html
theme/static_src/src/: styles.css
